apps/hajimari/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari
  namespace: hajimari
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/enable: 'false'
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - home.lajas.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hajimari
      port: 3000
